Placing index.html to root directory

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <main class="container my-3">
-      <div class="py-3 px-3 has-background-light light-shadow">
+      <div class="py-3 px-3 light-shadow">
         <div class="level">
           <div class="level-left">
             <h3 class="subtitle has-text-weight-light">To create a note</h3>
@@ -87,7 +87,7 @@
           <div>
             <!-- Javascript will handle this. -->
           </div>
-        </div>  
+        </div>
       </div>
     </main>
 
