--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notabl</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
@@ -15,50 +15,45 @@
     />
   </head>
   <body>
-    <header class="container header my-2 light-shadow">
-      <section class="section has-background-light">
+    <header class="container header my-2">
+      <section class="section">
         <div class="level">
-          <div class="level-left">
-            <h3
-              class="level-item title has-text-link has-text-centered mt-3 wormy-font"
-            >
-              Notabl
-            </h3>
-            <p class="level-item small has-text-dark victor-font">
-              Sample Text here
-            </p>
-          </div>
-
-          <div class="level-right">
-            <p id="about" class="level-item small has-text-primary has-text">
-              About
-            </p>
-          </div>
+          <h3
+            class="level-item title has-text-link has-text-centered mt-3 wormy-font"
+          >
+            Notabl
+          </h3>
         </div>
       </section>
     </header>
 
     <main class="container my-3">
-      <div class="py-3 px-3 light-shadow">
+      <section class="py-3 px-3 is-medium section">
         <div class="level">
           <div class="level-left">
             <h3 class="subtitle has-text-weight-light">To create a note</h3>
           </div>
           <div class="level-right">
             <!-- Button for Creating Any Type of Notes -->
-            <button id="create-note-button" class="button is-success is-light">
-              <p class="is-capitalized has-text-weight-medium">
-                Create a Note <span id="directional-unicode"></span>;
-              </p>
-            </button>
+            <div class="field">
+              <div class="control">
+                <p class="select">
+                  <select name="" id="">
+                    <option value=""> --Create Note-- </option>
+                    <option value="">Create Note</option>
+                    <option value=""> Event</option>
+                  </select>
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- This is a form that is hide in after the page loads. -->
       <div class=""></div>
 
-      <div class="columns my-2 mx-1">
+      <div class="columns my-2">
         <div class="column has-background-light mx-1">
           <div class="">
             <h3 class="subtitle has-text-centered">Current Task</h3>
