Adding Select's functionality

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <div class="field">
               <div class="control">
                 <p class="select">
-                  <select name="" id="">
-                    <option value=""> --Create Note-- </option>
-                    <option value="">Create Note</option>
-                    <option value=""> Event</option>
+                  <select name="" id="mySelect">
+                    <option value="task">Create Task</option>
+                    <option value="event">Create Event</option>
+                    <option value="note">Create Note</option>
                   </select>
                 </p>
               </div>
@@ -88,6 +88,6 @@
 
     <footer></footer>
 
-    <script src="app.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
