--- a/html/login.html
+++ b/html/login.html
@@ -32,8 +32,6 @@
         <div class="columns is-centered">
           <div class="column is-two-fifths">
             <div class="card has-background-light">
-              <h2 class=""></h2>
-              <span class=""></span>
               <div class="card-content">
                 <div class="field">
                   <label class="label" for="">Username</label>
@@ -51,7 +49,12 @@
                     placeholder="Enter Password"
                   />
                 </div>
-                <div class="field">
+                <div class="field is-groped is-grouped-right">
+                  <div class="control">
+                    <button class="button is-success is-outlined">
+                      Login
+                    </button>
+                  </div>
                   <div class="control">
                     <button class="button is-success is-outlined">
                       Login
@@ -67,6 +70,6 @@
 
     <footer></footer>
 
-    <script src="app.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
