adding test html to make prototype of how the popup modal could be dynamic

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=MuseoModerno&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
   </head>
   <body>
     <div></div>
@@ -107,7 +108,19 @@
       </div>
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+      <!-- An example of mockup of different modals-->
+      <section class="columns is-centered">
+        <!-- Task Column -->
+        <div class="column">
+          <h3 class="has-text-centered">Task Modal</h3>
+        </div>
+        <!-- Events Column -->
+        <div class="column"></div>
+        <!-- Important Column -->
+        <div class="column"></div>
+      </section>
+    </footer>
 
     <script src="../js/app.js"></script>
   </body>
